# aegis-genai-gateway

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
console/: README.md  index.html  package-lock.json  package.json  vite.config.ts
console/src/: App.tsx  main.tsx
console/src/api/: client.ts  types.ts
console/src/auth/: AuthContext.tsx
console/src/components/: Layout.tsx  StatusBadge.tsx
console/src/pages/: AdminPage.tsx  DashboardPage.tsx  LoginPage.tsx  RunDetailPage.tsx  RunsPage.tsx
docs/: cost-model.md  runbook.md  threat-model.md
docs/adr/: 0001-provider-abstraction-layer.md  0002-policy-based-routing.md  0003-local-first-contract-testing.md  0004-postgres-for-audit-cost-and-trace.md  0005-rbac-enforced-at-query-layer.md  0006-per-provider-circuit-breaker.md  0007-multi-cloud-over-vendor-lock-in.md  0008-eval-gate-golden-fixtures.md  template.md
docs/architecture/: README.md  component.md  container.md  context.md
eval/: README.md
eval/cases/: chat_quality.yaml  guardrails.yaml  robustness.yaml  tool_safety.yaml  tool_use.yaml
infra/bicep/: README.md  bicepconfig.json  main.bicep
infra/terraform/: .tflint.hcl  README.md  iam.tf  network.tf  outputs.tf  secrets.tf  variables.tf  versions.tf
policies/: guardrails.yaml  pricing.yaml  routing.yaml  tenants.yaml
scripts/: seed.py  smoke_test_local_provider.py
src/aegis/: __init__.py  config.py  main.py
src/aegis/agent/: runtime.py  trace.py
src/aegis/api/: routes_admin.py  routes_agent.py  routes_chat.py  routes_cost.py
src/aegis/cost/: budgets.py  pricing.py  tracker.py
tests/contract/: fakes.py  test_bedrock_contract.py  test_foundry_contract.py
tests/integration/: test_sql_readonly_postgres.py
tests/unit/: conftest.py  test_api.py  test_api_admin.py  test_api_agents.py  test_api_cost.py  test_circuit_breaker.py  test_cost_pricing.py  test_cost_tracker_and_budgets.py  test_eval_harness.py  test_governance_pii.py  test_governance_pipeline.py  test_governance_prompt_injection.py  test_governance_secrets.py  test_local_provider.py  test_router.py  test_runtime.py  test_runtime_guardrails_and_cost.py  test_tenancy_api_keys.py  test_tenancy_rbac.py  test_tools_calculator.py  test_tools_http_allowlist.py  test_tools_knowledge_base.py  test_tools_sql_readonly.py  test_trace_store.py
(+44 files in other folders)
